属性编辑完善

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.6.5",
     "deepmerge": "^4.2.2",
     "element-ui": "^2.13.2",
+    "once": "^1.4.0",
+    "phy-touch": "^0.1.1",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
   },
