--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "element-ui": "^2.13.2",
     "once": "^1.4.0",
     "phy-touch": "^0.1.1",
+    "swiper": "^6.1.2",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
