--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.13.2",
     "once": "^1.4.0",
     "phy-touch": "^0.1.1",
+    "preloader": "^4.0.3",
     "qrcode": "^1.4.4",
     "swiper": "^6.1.2",
     "vue": "^2.6.11",
